--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
   </header>
   <main>
     <section>
-      <h2>Shake the Box and Decide!</h2>
+      <h2>Select a Category</h2>
+      <select id="category-select">
+        <option value="all">All</option>
+        <option value="fast-food">Fast Food</option>
+        <option value="dishes">Dishes</option>
+        <option value="street-food">Street Food</option>
+        <option value="famous-restaurants">Restaurants</option>
+        <option value="desserts">Desserts</option>
+        <!-- Add more category options here -->
+      </select>
       <button id="spin-btn">Shake</button>
     </section>
     <section id="result-section">
