--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <option value="street-food">Street Food</option>
         <option value="famous-restaurants">Restaurants</option>
         <option value="desserts">Desserts</option>
+        <option value="breakfast">Breakfast</option>
         <!-- Add more category options here -->
       </select>
       <button id="spin-btn">Shake</button>
